[package]
name = "hyperball"
version = "0.1.0"
edition = "2021"
author = "Egor Krasnoperov"
student_number = "2384361"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5" 
petgraph = "0.6.4"
petgraph-gen = "0.1.3"
rand = "0.8.5"
hyperloglogplus = "0.4.1"
webgraph = "0.1.0"
csv = "*"
